--- a/daftar.html
+++ b/daftar.html
@@ -123,7 +123,7 @@
 			<div class="teng">
 				<ul>
 					<li><a href="">Home</a></li>
-					<li><a  href="index.html">Login</a></li>
+					<li><a  href="index.php">Login</a></li>
 					<li><a href="berita.html">Berita</a></li>
 					<li><a href="about.html">Profil</a></li>
 					<li><a class="active" href="">Daftar</a></li>
