--- a/berita.html
+++ b/berita.html
@@ -29,6 +29,6 @@
 			<td colspan="3"><img src="Uad.jpg" width="100%" height="100"></td>
 		</tr>
 	</table>
-	<center><a href="index.html"><button class="btn">Kembali</button></a></center>
+	<center><a href="index.php"><button class="btn">Kembali</button></a></center>
 </body>
 </html>
