--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 				<td width="40%">: aldinnawulan15@gmail.com </td>
 			</tr>
 		</table>
-		<a href="index.html"><button class="btn">Kembali</button></a>
+		<a href="index.php"><button class="btn">Kembali</button></a>
 	</center>
 </body>
 </html>
